2007-12-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: added cheese and gvfs to
	meta-gnome-proposed.

2007-12-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/darcs.py: fixed getting tree_id for Darcs
	modules.  (closes: #504648)

2007-12-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules:
	Added libspectre (library for rendering Postscript documents).

2007-12-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules:
	Updated poppler to 0.6.3 (also updated wiki page).

2007-12-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	reviewed by: Frederic Peters

	* jhbuild/modtypes/waf.py (WafModule.skip_configure): Add
	skip_configure method to avoid always running waf configure even
	when not needed or requested.

2007-12-18  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-external-deps-2.22.modules: Make rarian use http,
	not ftp (which is down).

2007-12-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: Glade 3 branched.

2007-12-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py, modulesets/moduleset.dtd: added
	support for git branches and tags (branches are handled by the revision
	attribute to mimic CVS and Subversion support, tags are handled by the
	new tag attribute).  (closes: #345282)

2007-12-18  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.22.modules: Added elisa and pigment.

2007-12-17  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	reviewed by: Frederic Peters

	* modulesets/moduleset.dtd,
	* jhbuild/modtypes/waf.py: Add new waf module type, for building
	projects that use waf.
	
	* modulesets/bootstrap.modules: Install waf during bootstrap.
	Temporarily uses svn, but will switch to tarball when waf 1.3.1
	gets released next month.
	
	* modulesets/gnome-suites-2.22.modules: Make gnome-python and
	gnome-python-desktop build using waf instead of autotools.
