@@ -1,3 +1,8 @@
+2007-12-21  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/git.py: fixed git pull from master branch
+	(closes: #504896)
+
 2007-12-20  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.22.modules: added cheese and gvfs to
